--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "punk-beers",
   "version": "1.0.0",
+  "license": "ISC",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
